apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
      - name: it-tools
        image: corentinth/it-tools:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
